<?xml version="1.0"?>
<package>
  <name>ahrs</name>
  <version>0.0.0</version>
  <description>

     AHRS: Attitude, heading ? system 

  </description>
  <author>Kevin Walchko</author>
  <maintainer email="kevin@todo.todo">kevin</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/walchko/ahrs</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

</package>


